[package]
name = "multipart"

version = "0.7.0"

authors = ["Austin Bonander <austin.bonander@gmail.com>"]

description = "A backend-agnostic extension for HTTP libraries that provides support for POST multipart/form-data requests on for both client and server."

keywords = ["form-data", "hyper", "iron", "http", "upload"]

repository = "http://github.com/cybergeek94/multipart"

documentation = "http://cybergeek94.github.io/multipart/doc/multipart/index.html"

license = "MIT OR Apache-2.0"

[dependencies.multipart-client]
path = "client/"
optional = true

[dependencies.multipart-server]
path = "server/"
optional = true

[dev-dependencies]
log = "0.3"
env_logger = "0.3"
rand = "0.3"

[features]
client = ["multipart-client"]
server = ["multipart-server"]
default = ["client", "server"]

