[package]
name = "multipart-server"
version = "0.1.0"
authors = ["Austin Bonander <austin.bonander@gmail.com>"]

[dependencies]
buf_redux = "0.1"
env_logger = "0.3"
log = "0.3"
memchr = "0.1"
mime = ">=0.2,<0.3"
mime_guess = "1.6"
rand = "0.3"
tempdir = "0.3"

[dependencies.hyper]
optional = true
version = "0.8"

[dependencies.iron]
optional = true
version = "0.3"

# NOTE: use `nickel_` feature, as `hyper` feature is required.
[dependencies.nickel]
optional = true
version = "0.8"

[dependencies.tiny_http]
optional = true
version = "0.5"

[features]
default = ["hyper"]
all = ["iron", "nickel_", "tiny_http"]
nickel_ = ["hyper", "nickel"]